XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__DupeBlocker_Log__c.object
<CustomObject>
    <fields>
        <fullName>CRMfusionDBR101__Date_Time__c</fullName>
        <label>Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exception</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Merge</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DupeBlocker_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DupeBlocker Log</label>
    <listViews>
        <fullName>CRMfusionDBR101__All</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__Auto_Conversions</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Event_Type__c</field>
            <operation>equals</operation>
            <value>Auto-Convert</value>
        </filters>
        <label>Auto-Conversions</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__Auto_Merges</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Event_Type__c</field>
            <operation>equals</operation>
            <value>Auto-Merge</value>
        </filters>
        <label>Auto-Merges</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__Exceptions</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Event_Type__c</field>
            <operation>equals</operation>
            <value>Exception</value>
        </filters>
        <label>Exceptions</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__Manual_Conversions</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Event_Type__c</field>
            <operation>equals</operation>
            <value>Manual Convert</value>
        </filters>
        <label>Manual Conversions</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__Manual_Merges</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__User__c</columns>
        <columns>CRMfusionDBR101__Event_Type__c</columns>
        <columns>CRMfusionDBR101__Date_Time__c</columns>
        <columns>CRMfusionDBR101__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Event_Type__c</field>
            <operation>equals</operation>
            <value>Manual Merge</value>
        </filters>
        <label>Manual Merges</label>
    </listViews>
    <nameField>
        <displayFormat>L{00000000}</displayFormat>
        <label>DupeBlocker Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>